--- a/reference/1.0.0/CardPointeGatewayAPI/CardPointeGatewayAPI.yaml
+++ b/reference/1.0.0/CardPointeGatewayAPI/CardPointeGatewayAPI.yaml
@@ -41,7 +41,7 @@ paths:
     get:
       tags:
         - inquireMerchant Endpoint Definition
-      x-group-name: CardSecure
+      x-group-name: CardPointe Gateway API
       x-proxy-name: inquireMerchant
       x-default-example: PaymentCard
       summary: A GET request to the inquireMerchant endpoint returns information on the merchant account configuration.
@@ -77,7 +77,7 @@ paths:
     post:
       tags:
         - echo
-      x-group-name: 'CardSecure'
+      x-group-name: CardPointe Gateway API
       x-proxy-name: 'echo'
       summary: Send a ping command to the server.
       description: A call to the echo service endpoint sends a ping command to the CardSecure server to verify the application's connection.
