--- a/reference/1.0.0/CardPointeGatewayAPI/CardPointeGatewayAPI.yaml
+++ b/reference/1.0.0/CardPointeGatewayAPI/CardPointeGatewayAPI.yaml
@@ -77,7 +77,7 @@ paths:
       tags:
         - surcharge Endpoint Definition
       x-group-name: CardPointe Gateway API
-      x-proxy-name: surcharge
+      x-proxy-name: inquireMerchant
       x-default-example: PaymentCard
       summary: The surcharge endpoint is used to determine whether a surcharge fee will be applied to a transaction, based on the cardholder's postal code and payment method.
       description: |+ 
@@ -110,6 +110,13 @@ paths:
           content:
             application/json:
               schema: {$ref: '#/components/schemas/inquireMerchantSuccess'}
+              examples:
+                Approved for Surcharge:
+                  $ref: '#/components/examples/approvedsurchargeExample'
+                Debit Card not Elligible:
+                  $ref: '#/components/examples/debitcardnotelligible'
+                Missing Postal and Token:
+                  $ref: '#/components/examples/missingpostalandtoken'
         400:
           description: Not Found
           content:
@@ -936,6 +943,23 @@ components:
           schema:
             $ref: '#/components/schemas/Error'
   examples:
+    approvedsurchargeExample:
+      value:
+        token: CREDIT,
+        postal: NOT_RESTRICTED,
+        messages: []
+    debitcardnotelligible:
+      value:
+        token: DEBIT,
+        postal: UNKNOWN,
+        messages: [{"field": "postal", "message": "postal is missing or empty"}]
+    missingpostalandtoken:
+      value:
+        token: UNKNOWN
+        postal: UNKNOWN
+        messages: [
+          {"field": "token", "message": "token is missing or empty"},
+          {"field":"postal", "message": "postal is missing or empty"}]
     Successful:
       value:
         errorcode: 0,
